Fixed invisible pagination for forms

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -272,7 +272,6 @@
 /**
  * Information sidebar on forms page
  */
-.post-type-af_form .tablenav,
 .post-type-af_form .search-box {
 	display: none;
 }
